--- a/src/.env
+++ b/src/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:a7ZBLsKntd8gn8vcJJi4372iufsQxNZ27bQtj5Gwjf0=
+APP_KEY=base64:B9SE4EPWS/rgmnze4YQCH8sfMDdIccY+bxzDe4CQw0I=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=jur
+DB_USERNAME=secret
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
