--- a/src/.env
+++ b/src/.env
@@ -49,3 +49,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+ZOOM_API_URL="https://api.zoom.us/v2/"
+ZOOM_API_KEY="3veCQYfyS_W8D-WIu8VZrA"
+ZOOM_API_SECRET="keYvVqDhIfqHhDZ0Kg7CUUhKmghvRQyEfFbm"
